--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/background_project"
     tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/start_logo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/start_logo"
+        android:textSize="25dp"
+        android:textAlignment="center"
+        android:backgroundTint="@color/green"
+        android:textColor="@color/light_green"
+        android:textStyle="bold"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="100dp"/>
+    <Button
+        android:id="@+id/start_play"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/start_play"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="250dp"
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:backgroundTint="@color/green"
+        android:textColor="@color/light_green"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/start_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:backgroundTint="@color/green"
+        android:gravity="center"
+        android:text="@string/start_settings"
+        android:textAlignment="center"
+        android:textColor="@color/light_green"/>
+
+
+
+
+
+</LinearLayout>
